--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "*.**": "prettier --check --ignore-unknown"
   },
   "dependencies": {
+    "3d-force-graph": "^1.70.5",
     "@nuxt/content": "^1.15.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
