--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxt/content": "^1.15.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "three-spritetext": "^1.6.3",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
