--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "3d-force-graph": "^1.70.5",
     "@nuxt/content": "^1.15.1",
+    "@tailwindcss/typography": "^0.5.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "three-spritetext": "^1.6.3",
@@ -35,28 +36,34 @@
     "@babel/eslint-parser": "^7.16.3",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@nuxt/postcss8": "^1.1.3",
+    "@nuxtjs/color-mode": "^2.1.1",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@vue/test-utils": "^1.3.0",
+    "autoprefixer": "^10.4.2",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.4",
-    "eslint": "^8.4.1",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.2.0",
+    "eslint-plugin-vue": "^8.3.0",
     "husky": "^7.0.4",
     "jest": "^27.4.4",
     "lint-staged": "^12.1.2",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.5",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard": "^24.0.0",
+    "tailwindcss": "^3.0.15",
     "vue-jest": "^3.0.4"
   }
 }
