--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "husky": "^7.0.4",
     "jest": "^27.4.4",
     "lint-staged": "^12.1.2",
+    "ohm-js": "^16.2.0",
     "postcss": "^8.4.5",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
