--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "remark-wiki-link": "^1.0.4",
     "three-spritetext": "^1.6.3",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
